css overflow fix

--- a/main.css
+++ b/main.css
@@ -1,17 +1,16 @@
 html {
     margin: 0px;
     scroll-behavior: smooth;
+    scrollbar-width: thin;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0px;
-    min-width: 100vw;
-    min-height: 100vh;
+    min-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-x: hidden;
 }
 
 h1 {
@@ -51,6 +50,7 @@ a:hover {
 
 #welcome {
     padding: 15px;
+    margin: 20px 0px;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -72,6 +72,7 @@ a:hover {
 
 #projects, #education, #jobs {
     padding: 15px;
+    margin: 20px 0px;
 }
 
 .projects-box, .edubox, .jobbox {
@@ -121,12 +122,12 @@ a:hover {
 }
 
 #footer {
-    width: calc(100vw - 2px);
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 40px 0px;
-    border: 1px solid #e7ebef;
+    border-top: 1px solid #e7ebef;
     background-color: #FFF;
     box-sizing: content-box;
 }
